force-app/main/default/objects/Action_Execution_Log__c/Action_Execution_Log__c.object-meta.xml
<CustomObject>
    <label>Action Execution Log</label>
    <nameField>
        <displayFormat>AEL-{0000000}</displayFormat>
        <label>Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Execution Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>