force-app/main/default/objects/Action_Execution_Log__c/fields/Action_Key__c.field-meta.xml
<CustomField>
    <fullName>Action_Key__c</fullName>
    <label>Action Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>