force-app/main/default/objects/Action_Execution_Log__c/fields/After_Value__c.field-meta.xml
<CustomField>
    <fullName>After_Value__c</fullName>
    <label>After Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>