force-app/main/default/objects/Action_Execution_Log__c/fields/Before_Value__c.field-meta.xml
<CustomField>
    <fullName>Before_Value__c</fullName>
    <label>Before Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>