force-app/main/default/objects/Action_Execution_Log__c/fields/Executed_By__c.field-meta.xml
<CustomField>
    <fullName>Executed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Action_Execution_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>