force-app/main/default/objects/Action_Execution_Log__c/fields/Impact_Value__c.field-meta.xml
<CustomField>
    <fullName>Impact_Value__c</fullName>
    <label>Impact Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>